--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "korni",
-  "name": "kornicameister official page",
+  "short_name": "Elm App",
+  "name": "Create Elm App Sample",
   "icons": [
     {
       "src": "favicon.ico",
