--- a/package.json
+++ b/package.json
@@ -8,17 +8,21 @@
     "npm": "6.4.1"
   },
   "scripts": {
-    "start": "elm-app start",
-    "build": "elm-app build",
+    "start": "concurrently \"elm-app start\" \"npm run watch-css\"",
+    "build": "npm run build-css && elm-app build",
     "test": "elm-app test",
+    "eject": "elm-app eject",
     "lint": "elm-format --validate src tests && prettier --list-different '**/*.*'",
     "prettier": "prettier --write --config .prettierrc 'src/*.js'",
-    "eject": "elm-app eject"
+    "build-css": "node-sass-chokidar --output-style compressed --include-path node_modules/ src/ -o src/",
+    "watch-css": "npm run build-css && node-sass-chokidar --include-path node_modules/ src/ -o src/ --watch"
   },
   "dependencies": {
-    "create-elm-app": "^2.2.3"
+    "create-elm-app": "^2.2.3",
+    "node-sass-chokidar": "^1.3.4"
   },
   "devDependencies": {
+    "concurrently": "^4.0.1",
     "prettier": "^1.14.3",
     "elm-format": "0.8.1"
   }
