--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
   },
   "dependencies": {
     "create-elm-app": "^2.2.3",
-    "node-sass-chokidar": "^1.3.4"
+    "node-sass-chokidar": "^1.3.4",
+    "normalize.css": "^8.0.1"
   },
   "devDependencies": {
     "concurrently": "^4.0.1",
     "prettier": "^1.14.3",
-    "elm-format": "0.8.1"
+    "elm-format": "0.8.1",
+    "webpack": "^4.25.1"
   }
 }
