--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
   "dependencies": {
     "create-elm-app": "3.0.3",
     "node-sass-chokidar": "^1.3.4",
-    "normalize.css": "^8.0.1"
+    "normalize.css": "^8.0.1",
+    "trianglify": "^1.2.0"
   },
   "devDependencies": {
     "concurrently": "^4.0.1",
