--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -21,10 +21,12 @@ jobs:
       - run:
           name: Lint
           command: npm run lint
-      # it does not finish
-      # - run:
-      #     name: Test
-      #     command: npm run test
+      - run:
+          name: Write tag version
+          command: |
+            cat << EOF > .env.production
+            ELM_APP_VERSION=${CIRCLE_TAG:-"dev"}
+            EOF
       - run:
           name: Build
           command: npm run build
@@ -42,9 +44,8 @@ jobs:
       - checkout
       - run:
           command: |
-            repo_tag=$(git describe --tags)
             pkg_tag=$(node -p "require('./package.json').version")
-            if [ "${repo_tag}" != "${pkg_tag}" ]; then echo "Tag ${repo_tag} and application version ${pkg_tag} differ"; exit 1;  fi
+            if [ "${CIRCLE_TAG}" != "${pkg_tag}" ]; then echo "Tag ${repo_tag} and application version ${pkg_tag} differ"; exit 1;  fi
 
 
   # deploy github releases
@@ -98,7 +99,7 @@ jobs:
 
 workflows:
   version: 2
-  korni_pipeline:
+  build:
     jobs:
       - build:
           filters:
@@ -114,7 +115,7 @@ workflows:
             branches:
               ignore: /.*/
             tags:
-              only: /^(?:0|[1-9]\d*)\.(?:0|[1-9]\d*)\.(?:0|[1-9]\d*)$/
+              only: /.*/
       - deploy_gr:
           requires:
             - verify_version_match
@@ -122,7 +123,7 @@ workflows:
             branches:
               ignore: /.*/
             tags:
-              only: /^(?:0|[1-9]\d*)\.(?:0|[1-9]\d*)\.(?:0|[1-9]\d*)$/
+              only: /(?:0|[1-9]\d*)\.(?:0|[1-9]\d*)\.(?:0|[1-9]\d*)/
       - deploy_gp:
           requires:
             - verify_version_match
@@ -130,4 +131,4 @@ workflows:
             branches:
               ignore: /.*/
             tags:
-              only: /^(?:0|[1-9]\d*)\.(?:0|[1-9]\d*)\.(?:0|[1-9]\d*)$/
+              only: /(?:0|[1-9]\d*)\.(?:0|[1-9]\d*)\.(?:0|[1-9]\d*)/
