--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
   "dependencies": {
     "create-elm-app": "3.0.6",
     "node-sass-chokidar": "^1.3.4",
-    "normalize.css": "^8.0.1",
-    "trianglify": "^2.0.0"
+    "normalize.css": "^8.0.1"
   },
   "devDependencies": {
     "concurrently": "^4.0.1",
