--- a/package.json
+++ b/package.json
@@ -7,7 +7,23 @@
     "node": "11.12.0",
     "npm": "6.9.0"
   },
+  "dependencies": {
+    "create-elm-app": "3.0.6",
+    "node-sass-chokidar": "^1.3.4",
+    "normalize.css": "^8.0.1"
+  },
+  "devDependencies": {
+    "check-node-version": "^3.2.0",
+    "concurrently": "^4.0.1",
+    "prettier": "^1.16.4",
+    "elm-format": "0.8.1",
+    "elm-analyse": "^0.16.1",
+    "webpack": "^4.29.6"
+  },
   "scripts": {
+    "prestart": "npx check-node-version --package",
+    "preinstall": "npx check-node-version --package",
+    "pretest": "npx check-node-version --package",
     "start": "concurrently \"elm-app start\" \"npm run watch-css\"",
     "build": "npm run build-css && elm-app build",
     "test": "elm-app test",
@@ -16,17 +32,5 @@
     "prettier": "prettier --write --config .prettierrc 'src/*.js'",
     "build-css": "node-sass-chokidar --output-style compressed --include-path node_modules/ src/ -o src/",
     "watch-css": "npm run build-css && node-sass-chokidar --include-path node_modules/ src/ -o src/ --watch"
-  },
-  "dependencies": {
-    "create-elm-app": "3.0.6",
-    "node-sass-chokidar": "^1.3.4",
-    "normalize.css": "^8.0.1"
-  },
-  "devDependencies": {
-    "concurrently": "^4.0.1",
-    "prettier": "^1.16.4",
-    "elm-format": "0.8.1",
-    "elm-analyse": "^0.16.1",
-    "webpack": "^4.29.6"
   }
 }
