--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "dependencies": {
     "create-elm-app": "3.0.6",
+    "jsonp": "^0.2.1",
     "node-sass-chokidar": "^1.3.4",
     "normalize.css": "^8.0.1"
   },
