feat!: migrate from Elm to Astro
BREAKING CHANGE: Complete rewrite of the personal webpage using Astro framework

- Replace Elm with Astro 5.1 + TypeScript 5.7
- Add Tailwind CSS 3.4 for styling
- Implement new component-based architecture
- Add GitHub Actions workflow for automated deployment
- Configure base path for GitHub Pages deployment
- Fix asset paths to use BASE_URL for proper routing
- Maintain existing content and timeline structure

--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,27 @@
-# production
-build/
+# build output
+dist/
+.astro/
 
-# elm deps
-elm-stuff/
-
-# node deps
+# dependencies
 node_modules/
 
-# misc
+# logs
 npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+pnpm-debug.log*
 
-# css files, because we build from scss
-*.css
+# environment variables
+.env
+.env.production
 
-# env files for local dev
-.env.development*
-.env.*.local
+# macOS-specific files
+.DS_Store
+
+# old elm files
+elm-stuff/
+src/Main.elm
+src/*.scss
+src/*.js
+public/index.html
+elm.json
