--- a/package.json
+++ b/package.json
@@ -1,39 +1,23 @@
 {
-  "name": "src.kornicameister.github.io",
-  "homepage": "http://kornicameister.github.io/korni",
-  "version": "0.3.4",
-  "private": true,
-  "engines": {
-    "node": "14.0.0",
-    "npm": "6.14.4"
+  "name": "korni",
+  "type": "module",
+  "version": "1.0.0",
+  "scripts": {
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro check && astro build",
+    "preview": "astro preview",
+    "astro": "astro"
   },
   "dependencies": {
-    "create-elm-app": "^5.22.0",
-    "node-sass-chokidar": "^1.5.0",
-    "normalize.css": "^8.0.1"
+    "@astrojs/check": "^0.9.4",
+    "astro": "^5.1.3",
+    "typescript": "^5.7.3"
   },
   "devDependencies": {
-    "check-node-version": "^4.2.1",
-    "concurrently": "^6.2.1",
-    "elm-analyse": "^0.16.5",
-    "elm-format": "0.8.5",
-    "elm-lsp": "^1.0.3",
-    "elm-xref": "^4.1.0",
-    "prettier": "^2.4.1",
-    "webpack": "^4.46.0"
-  },
-  "scripts": {
-    "prestart": "npx check-node-version --package",
-    "preinstall": "npx check-node-version --package",
-    "pretest": "npx check-node-version --package",
-    "start": "concurrently \"npm run watch-elm\" \"npm run watch-css\"",
-    "build": "npm run build-css && elm-app build",
-    "test": "elm-app test",
-    "eject": "elm-app eject",
-    "lint": "elm-format --validate src tests && prettier --list-different '**/*.*' && elm-analyse && elm-xref",
-    "prettier": "prettier --write --config .prettierrc '**/*.*'",
-    "build-css": "node-sass-chokidar --output-style compressed --include-path node_modules/ src/ -o src/",
-    "watch-css": "npm run build-css && node-sass-chokidar --include-path node_modules/ src/ -o src/ --watch",
-    "watch-elm": "HTTPS=true elm-app start"
+    "@astrojs/tailwind": "^5.1.3",
+    "tailwindcss": "^3.4.17",
+    "prettier": "^3.4.2",
+    "prettier-plugin-astro": "^0.14.1"
   }
 }
