Fix icon alignment issues and bump version to 1.0.1
- Remove fa-border and fa-pull-left classes from section header icons
- Add fixed dimensions (40x40px) and flexbox centering for social media icons
- Set consistent width (60px) with object-fit: contain for language logos
- Improve overall visual consistency and alignment throughout the page

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,9 @@
 dist/
 .astro/
 
+# generated types
+.astro/
+
 # dependencies
 node_modules/
 
@@ -18,10 +21,8 @@ pnpm-debug.log*
 # macOS-specific files
 .DS_Store
 
-# old elm files
-elm-stuff/
-src/Main.elm
-src/*.scss
-src/*.js
-public/index.html
-elm.json
+# test screenshots
+test-screenshots/*.png
+test-screenshots/*.jpg
+test-screenshots/*.jpeg
+!test-screenshots/README.md
